# diary_project_TF4

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  ERROR_LOG.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
config/: settings.py  settings_test.py  urls.py
diary/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py
diary/templates/diary/: entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
templates/: base.html
tests/: test_auth.py  test_forms.py  test_models.py  test_views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
