[project]
name = "diary-project-tf4"
version = "0.1.0"
description = ""
authors = [
    {name = "makhailya",email = "makhailya@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
